STYLING, FIX - Fixed repeat breaks added to be left aligned with some padding to look nicer

--- a/app/assets/stylesheets/schedule.scss
+++ b/app/assets/stylesheets/schedule.scss
@@ -528,6 +528,11 @@ input[readonly="readonly"]
     margin-top: 50px;
     z-index: 1002;
 }
+#break-cont
+{
+	text-align: left;
+	padding-left: 20px;
+}
 .break-elem
 {
     color: black;
